--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,7 @@ jobs:
         with:
           openshift_server_url: ${{ secrets.OPENSHIFT_SERVER }}
           openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
-          insecure_skip_tls_verify: true
-      - name: Create or switch project
-        uses: redhat-actions/oc-new-app@v1.3
-        with:
-          app_name: test-elixir
-          image: socuz/landing-page:latest
-      - name: Logout from OpenShift
-        run: oc logout
+          insecure_skip_tls_verify: true    
+      - name: Test
+        run: |
+          oc api-resources
